--- a/.github/workflows/make_stable_release.yml
+++ b/.github/workflows/make_stable_release.yml
@@ -4,7 +4,7 @@ name: Make Stable Release
 on: workflow_dispatch
 
 jobs:
-  make_stable_release:
+  update_stable_branch:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
