--- a/.github/workflows/make_stable_release.yml
+++ b/.github/workflows/make_stable_release.yml
@@ -14,6 +14,8 @@ jobs:
 
   make_stable_release:
     runs-on: ubuntu-latest
+    needs:
+      - update_stable_branch
     steps:
       - run: mkdir /tmp/artifacts
 
