--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ log = "0.4.22"
 mockall = "0.13.0"
 pretty_env_logger = "0.5.0"
 rayon = "1.10.0"
-reqwest = { version = "0.12", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = "3.9"
+steam_shortcuts_util = "1.1.8"
+ureq = "2.11.0"
 urlencoding = "2.1.3"
 
 [features]
