--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ serde_with = "3.9"
 steam_shortcuts_util = "1.1.8"
 ureq = "2.11.0"
 urlencoding = "2.1.3"
+which = "7.0.0"
 
 [features]
 e2e = []
+
+[profile.release]
+lto = true
