--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = "3.9"
 steam_shortcuts_util = "1.1.8"
+tempfile = "3.14.0"
 ureq = "2.11.0"
 urlencoding = "2.1.3"
 which = "7.0.0"
