Update to use shell script instead of gui binary directly

--- a/build_assets/decktricks.desktop
+++ b/build_assets/decktricks.desktop
@@ -1,7 +1,10 @@
 #!/usr/bin/env xdg-open
 [Desktop Entry]
 Name=Decktricks
-Exec=bash -xc '$HOME/.local/share/decktricks/decktricks-gui'
+Exec=bash -xc '$HOME/.local/share/decktricks/decktricks-gui.sh'
 Icon=steamdeck-gaming-return
 Type=Application
-StartupNotify=false
+Terminal=false
+Type=Application
+Categories=Game
+Actions=Fullscreen;Standalone;
