Updated docker image

--- a/misc/act-docker/Dockerfile
+++ b/misc/act-docker/Dockerfile
@@ -10,17 +10,17 @@ RUN rustup default stable
 #       because we need 4.4 to stop a terrible Linux bug in Godot,
 #       and download times from tuxfamily are quite slow.
 # TODO: Switch to fetching from github once 4.4 is officially released
-RUN mkdir -p /root/.local/share/godot/export_templates/4.4.dev3/
+RUN mkdir -p /root/.local/share/godot/export_templates/4.4.dev/
 RUN mkdir -p /tmp/godot_extraction
 COPY godot_binary.7z linux_debug.7z linux_release.7z /tmp/godot_extraction/
 WORKDIR /tmp/godot_extraction
 RUN 7z x godot_binary.7z 
 RUN 7z x linux_debug.7z 
 RUN 7z x linux_release.7z
-RUN cp Godot_v4.4-dev3_linux.x86_64 /usr/bin/godot
-WORKDIR /root/.local/share/godot/export_templates/4.4.dev3/
-RUN cp /tmp/godot_extraction/linux_debug.4.4.dev3.x86_64 linux_debug.x86_64
-RUN cp /tmp/godot_extraction/linux_release.4.4.dev3.x86_64 linux_release.x86_64
+RUN cp godot /usr/bin/godot
+WORKDIR /root/.local/share/godot/export_templates/4.4.dev/
+RUN cp /tmp/godot_extraction/linux_debug.x86_64 linux_debug.x86_64
+RUN cp /tmp/godot_extraction/linux_release.x86_64 linux_release.x86_64
 WORKDIR /
 RUN rm -r /tmp/godot_extraction
 # }}}
@@ -53,9 +53,12 @@ RUN cargo test --release
 # Everything below this is just to make sure that we're putting out a working image
 WORKDIR /work/decktricks/gui/godot
 # Deps used by decktricks/godot:
+RUN rm -rf build
 RUN mkdir -p build
-RUN godot --headless --verbose --export-debug Linux
-RUN cp /work/decktricks/gui/rust/target/debug/libdecktricks_godot_gui.so build/
+RUN rm -rf .godot
+RUN cp /work/decktricks/gui/rust/target/release/libdecktricks_godot_gui.so build/
+RUN godot --headless --import
+RUN godot --headless --verbose --export-release "Linux"
 WORKDIR /work/decktricks
 RUN ./scripts/tests/test_gui_simple_e2e.sh
 
