--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-log = "0.4.22"
 mockall = "0.13.0"
-pretty_env_logger = "0.5.0"
 rayon = "1.10.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -20,6 +18,7 @@ which = "7.0.0"
 
 [features]
 e2e = []
+test = []
 
 [profile.release]
 lto = true
