--- a/.github/workflows/make_stable_release.yml
+++ b/.github/workflows/make_stable_release.yml
@@ -24,6 +24,7 @@ jobs:
           curl -S -s -L -O --output-dir /tmp/artifacts --connect-timeout 60 https://github.com/MrAwesome/decktricks/releases/download/latest/decktricks-install.desktop
           curl -S -s -L -O --output-dir /tmp/artifacts --connect-timeout 60 https://github.com/MrAwesome/decktricks/releases/download/latest/decktricks-install.sh
           curl -S -s -L -O --output-dir /tmp/artifacts --connect-timeout 60 https://github.com/MrAwesome/decktricks/releases/download/latest/decktricks.tar.xz
+          curl -S -s -L -O --output-dir /tmp/artifacts --connect-timeout 60 https://github.com/MrAwesome/decktricks/releases/download/latest/DECKTRICKS_TARBALL_XXH64SUM
 
       - name: Update stable release
         uses: softprops/action-gh-release@v2
@@ -38,3 +39,4 @@ jobs:
             /tmp/artifacts/decktricks.tar.xz
             /tmp/artifacts/decktricks-install.desktop
             /tmp/artifacts/decktricks-install.sh
+            /tmp/artifacts/DECKTRICKS_TARBALL_XXH64SUM
