--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -85,6 +85,13 @@ jobs:
           path: ./build/decktricks-install.sh
           if-no-files-found: error
 
+      - name: Upload update script
+        uses: actions/upload-artifact@v4
+        with:
+          name: verified-gui-update-script
+          path: ./build/decktricks-update.sh
+          if-no-files-found: error
+
       - name: Upload tarball checksum
         uses: actions/upload-artifact@v4
         with:
@@ -136,4 +143,5 @@ jobs:
             /tmp/artifacts/verified-gui-tar/decktricks.tar.xz
             /tmp/artifacts/verified-gui-installer-desktop/decktricks-install.desktop
             /tmp/artifacts/verified-gui-installer-script/decktricks-install.sh
+            /tmp/artifacts/verified-gui-update-script/decktricks-update.sh
             /tmp/artifacts/verified-gui-tar-checksum/DECKTRICKS_TARBALL_XXH64SUM
