--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+daemonize = "0.5.0"
 mockall = "0.13.0"
 rayon = "1.10.0"
 serde = { version = "1.0", features = ["derive"] }
