--- a/config.json
+++ b/config.json
@@ -5,9 +5,9 @@
         {
             "id": "nested-desktop",
             "provider_config": {
-                "type": "simple-command",
-                "command": "steamos-nested-desktop",
-                "spawn_detached": true
+                "type": "systemd-run",
+                "unit_id": "decktricks-nested-desktop",
+                "command": "steamos-nested-desktop"
             },
             "tags": [
                 "system",
