In-between commit to verify act working

--- a/misc/act-docker/Dockerfile
+++ b/misc/act-docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM archlinux:base-devel AS base
 ENV CI=true
+ENV GODOT4_BIN=/usr/bin/godot
 RUN pacman -Syu --noconfirm git flatpak fontconfig p7zip rustup vim
 RUN rustup default stable
 #RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
@@ -10,16 +11,14 @@ RUN rustup default stable
 #       because we need 4.4 to stop a terrible Linux bug in Godot,
 #       and download times from tuxfamily are quite slow.
 # TODO: Switch to fetching from github once 4.4 is officially released
-RUN mkdir -p /root/.local/share/godot/export_templates/4.4.dev/
+RUN mkdir -p /root/.local/share/godot/export_templates/4.4.beta/
 RUN mkdir -p /tmp/godot_extraction
-COPY godot_binary.7z linux_debug.7z linux_release.7z /tmp/godot_extraction/
+COPY godot_binary.7z linux_release.7z /tmp/godot_extraction/
 WORKDIR /tmp/godot_extraction
 RUN 7z x godot_binary.7z 
-RUN 7z x linux_debug.7z 
 RUN 7z x linux_release.7z
 RUN cp godot /usr/bin/godot
-WORKDIR /root/.local/share/godot/export_templates/4.4.dev/
-RUN cp /tmp/godot_extraction/linux_debug.x86_64 linux_debug.x86_64
+WORKDIR /root/.local/share/godot/export_templates/4.4.beta/
 RUN cp /tmp/godot_extraction/linux_release.x86_64 linux_release.x86_64
 WORKDIR /
 RUN rm -r /tmp/godot_extraction
