--- a/gui/rust/Cargo.toml
+++ b/gui/rust/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.
 
 [dependencies]
-godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
+godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] } #, "api-custom"] }
 decktricks = { path = "../.." }
 
 [dev-dependencies]
