--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 
     "known_categories": [
         "recommended",
-        "games",
+        "gaming",
         "entertainment",
         "streaming",
         "system",
@@ -68,7 +68,7 @@
                 "prism"
             ],
             "categories": [
-                "games"
+                "gaming"
             ],
             "display_name": "Prism Launcher (Minecraft)",
             "description": "A custom launcher for Minecraft that allows you to easily manage multiple installations of Minecraft at once."
@@ -89,7 +89,7 @@
             ],
             "categories": [
                 "recommended",
-                "games"
+                "gaming"
             ],
             "icon": "XXX",
             "display_name": "EmuDeck",
@@ -184,7 +184,7 @@
                 "epic"
             ],
             "categories": [
-                "games"
+                "gaming"
             ],
             "icon": "XXX",
             "display_name": "Lutris",
@@ -197,7 +197,7 @@
                 "id": "org.DolphinEmu.dolphin-emu"
             },
             "categories": [
-                "games"
+                "gaming"
             ],
             "icon": "XXX",
             "display_name": "Dolphin Emulator (Gamecube/Wii)",
@@ -218,7 +218,7 @@
             ],
             "categories": [
                 "recommended",
-                "games"
+                "gaming"
             ],
             "icon": "XXX",
             "display_name": "Heroic Launcher (GOG, Epic, Amazon)",
