Huge codemod to execution contexts, add settings field in config

--- a/config.json
+++ b/config.json
@@ -1,6 +1,10 @@
 {
     "NOTE": "Changes to this file will not be reflected in the CLI or the GUI until you've run `cargo build` or `cargo build --release`, depending on mode.",
 
+    "settings": {
+        "controller_layout_id": "3512516632"
+    },
+
     "known_categories": [
         "recommended",
         "launchers",
